[PERE CTE  reviewed

--- a/main.ipynb
+++ b/main.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "f56288f4",
    "metadata": {},
    "outputs": [
@@ -262,6 +262,12 @@
        "      <td>Camembert Pierrot</td>\n",
        "      <td>14620.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Alice Mutton</td>\n",
+       "      <td>12909.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -272,10 +278,11 @@
        "1         29  Thüringer Rostbratwurst       20832.0\n",
        "2         59     Raclette Courdavault       19030.0\n",
        "3         62           Tarte au sucre       15925.0\n",
-       "4         60        Camembert Pierrot       14620.0"
+       "4         60        Camembert Pierrot       14620.0\n",
+       "5         17             Alice Mutton       12909.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +297,7 @@
     "ORDER BY TotalRevenue desc\n",
     "        )\n",
     "        SELECT ProductID, ProductName,TotalRevenue \n",
-    "            FROM top_profit limit 5\n",
+    "            FROM top_profit limit 6\n",
     "\"\"\"\n",
     "df = pd.read_sql_query(query, engine)\n",
     "df"
