did what i coudl

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,6 +17,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "84d5e1b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql \n",
+    "import sqlalchemy as alch # python -m pip install --upgrade 'sqlalchemy<2.0'\n",
+    "from getpass import getpass\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = getpass\n",
+    "password = getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "68f0e667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbName = \"northwind\"\n",
+    "connectionData=f\"mysql+pymysql://root:{password}@localhost/{dbName}\"\n",
+    "engine = alch.create_engine(connectionData)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "434a02a8",
    "metadata": {},
@@ -31,8 +66,101 @@
    "source": [
     "```sql\n",
     "-- Your code down below\n",
+    "select ProductName, Unit from products where Price > 50;\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "58fcaba8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mishi Kobe Niku</td>\n",
+       "      <td>18 - 500 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carnarvon Tigers</td>\n",
+       "      <td>16 kg pkg.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sir Rodney's Marmalade</td>\n",
+       "      <td>30 gift boxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "      <td>50 bags x 30 sausgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Côte de Blaye</td>\n",
+       "      <td>12 - 75 cl bottles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Manjimup Dried Apples</td>\n",
+       "      <td>50 - 300 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>5 kg pkg.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ProductName                  Unit\n",
+       "0          Mishi Kobe Niku      18 - 500 g pkgs.\n",
+       "1         Carnarvon Tigers            16 kg pkg.\n",
+       "2   Sir Rodney's Marmalade         30 gift boxes\n",
+       "3  Thüringer Rostbratwurst  50 bags x 30 sausgs.\n",
+       "4            Côte de Blaye    12 - 75 cl bottles\n",
+       "5    Manjimup Dried Apples      50 - 300 g pkgs.\n",
+       "6     Raclette Courdavault             5 kg pkg."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = '''select ProductName, Unit from products where Price > 50;'''\n",
+    "pd.read_sql_query(query, engine)"
    ]
   },
   {
@@ -72,6 +200,96 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c1d01e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>RevenuePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Côte de Blaye</td>\n",
+       "      <td>12 - 75 cl bottles</td>\n",
+       "      <td>63096.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "      <td>50 bags x 30 sausgs.</td>\n",
+       "      <td>20832.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>5 kg pkg.</td>\n",
+       "      <td>19030.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tarte au sucre</td>\n",
+       "      <td>48 pies</td>\n",
+       "      <td>15925.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Camembert Pierrot</td>\n",
+       "      <td>15 - 300 g rounds</td>\n",
+       "      <td>14620.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ProductName                  Unit  RevenuePrice\n",
+       "0            Côte de Blaye    12 - 75 cl bottles       63096.0\n",
+       "1  Thüringer Rostbratwurst  50 bags x 30 sausgs.       20832.0\n",
+       "2     Raclette Courdavault             5 kg pkg.       19030.0\n",
+       "3           Tarte au sucre               48 pies       15925.0\n",
+       "4        Camembert Pierrot     15 - 300 g rounds       14620.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = '''select ProductName, Unit, SUM(Price * Quantity) as RevenuePrice from products\n",
+    "\t\tjoin orderdetails on products.ProductID = Orderdetails.ProductID\n",
+    "        group by ProductName, Unit\n",
+    "        order by RevenuePrice desc\n",
+    "        limit 5;'''\n",
+    "pd.read_sql_query(query, engine)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4ff56e03",
    "metadata": {},
@@ -105,6 +323,90 @@
     "```sql\n",
     "-- Your code down below\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0ac0e236",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CategoryName</th>\n",
+       "      <th>products</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Confections</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Condiments</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dairy Products</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CategoryName  products\n",
+       "0     Confections        13\n",
+       "1       Beverages        12\n",
+       "2      Condiments        12\n",
+       "3         Seafood        12\n",
+       "4  Dairy Products        10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = '''select categories.CategoryName, count(distinct products.ProductID) as products from categories\n",
+    "\tjoin products on categories.CategoryID = products.CategoryID\n",
+    "    group by categories.CategoryID\n",
+    "    order by products desc\n",
+    "    limit 5;'''\n",
+    "pd.read_sql_query(query, engine)"
    ]
   },
   {
@@ -297,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.0"
   },
   "nbTranslate": {
    "displayLangs": [
