--- a/main.ipynb
+++ b/main.ipynb
@@ -17,11 +17,176 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c55536e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql # pip install pymysql\n",
+    "import sqlalchemy as alch # bash: conda activate ironhack; python -m pip install --upgrade 'sqlalchemy<2.0'\n",
+    "                                                        # pip install SQLAlchemy\n",
+    "from getpass import getpass\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from getpass import getpass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a8258898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9fb600c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
+   "source": [
+    "from getpass import getpass\n",
+    "password = getpass()\n",
+    "dbName = \"northwind\"\n",
+    "connectionData=f\"mysql+pymysql://root:{password}@localhost/{dbName}\"\n",
+    "engine = alch.create_engine(connectionData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b945c247",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d33472ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "434a02a8",
    "metadata": {},
    "source": [
     "## 1. Write a CTE that lists the names and quantities of products with a unit price greater than $50."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e47a78b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mishi Kobe Niku</td>\n",
+       "      <td>18 - 500 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carnarvon Tigers</td>\n",
+       "      <td>16 kg pkg.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sir Rodney's Marmalade</td>\n",
+       "      <td>30 gift boxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "      <td>50 bags x 30 sausgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Côte de Blaye</td>\n",
+       "      <td>12 - 75 cl bottles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Manjimup Dried Apples</td>\n",
+       "      <td>50 - 300 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>5 kg pkg.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ProductName                  Unit\n",
+       "0          Mishi Kobe Niku      18 - 500 g pkgs.\n",
+       "1         Carnarvon Tigers            16 kg pkg.\n",
+       "2   Sir Rodney's Marmalade         30 gift boxes\n",
+       "3  Thüringer Rostbratwurst  50 bags x 30 sausgs.\n",
+       "4            Côte de Blaye    12 - 75 cl bottles\n",
+       "5    Manjimup Dried Apples      50 - 300 g pkgs.\n",
+       "6     Raclette Courdavault             5 kg pkg."
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"SELECT ProductName, Unit FROM products where Price > 50;\"\n",
+    "\n",
+    "pd.read_sql_query(query, engine)\n"
    ]
   },
   {
@@ -72,6 +237,170 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "403c5bb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_query (query):\n",
+    "    return pd.read_sql_query (query, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fdeebc82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query= \"SELECT products.ProductID, ProductName, sum(Quantity) as TotalRevenue FROM Products JOIN orderdetails ON orderdetails.ProductID=products.ProductID group by ProductID ORDER by TotalRevenue desc;\"\n",
+    "\n",
+    "\"\"\"\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3b497fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductID</th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>TotalRevenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Gorgonzola Telino</td>\n",
+       "      <td>458.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Camembert Pierrot</td>\n",
+       "      <td>430.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Steeleye Stout</td>\n",
+       "      <td>369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59</td>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>346.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Chang</td>\n",
+       "      <td>341.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Genen Shouyu</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Mishi Kobe Niku</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Gustaf's Knäckebröd</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Røgede sild</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>67</td>\n",
+       "      <td>Laughing Lumberjack Lager</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>77 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ProductID                ProductName  TotalRevenue\n",
+       "0          31          Gorgonzola Telino         458.0\n",
+       "1          60          Camembert Pierrot         430.0\n",
+       "2          35             Steeleye Stout         369.0\n",
+       "3          59       Raclette Courdavault         346.0\n",
+       "4           2                      Chang         341.0\n",
+       "..        ...                        ...           ...\n",
+       "72         15               Genen Shouyu          25.0\n",
+       "73          9            Mishi Kobe Niku          20.0\n",
+       "74         22        Gustaf's Knäckebröd          18.0\n",
+       "75         45                Røgede sild          15.0\n",
+       "76         67  Laughing Lumberjack Lager           5.0\n",
+       "\n",
+       "[77 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simple_query(query)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4ff56e03",
    "metadata": {},
@@ -98,13 +427,101 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5dad5f54",
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4058b787",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CategoryName</th>\n",
+       "      <th>ProducCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Confections</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Condiments</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dairy Products</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Grains/Cereals</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Meat/Poultry</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Produce</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CategoryName  ProducCount\n",
+       "0     Confections           13\n",
+       "1       Beverages           12\n",
+       "2      Condiments           12\n",
+       "3         Seafood           12\n",
+       "4  Dairy Products           10\n",
+       "5  Grains/Cereals            7\n",
+       "6    Meat/Poultry            6\n",
+       "7         Produce            5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "```sql\n",
-    "-- Your code down below\n",
-    "```"
+    "query=\"SELECT CategoryName, Count(ProductID) as ProducCount FROM categories JOIN products ON categories.CategoryID=products.CategoryID group by CategoryName order by ProducCount desc;\"\n",
+    "simple_query(query)"
    ]
   },
   {
@@ -139,6 +556,104 @@
     "-- Your code down below\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bc971e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CategoryName</th>\n",
+       "      <th>AvgOrderQuantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Condiments</td>\n",
+       "      <td>28.2245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dairy Products</td>\n",
+       "      <td>26.0100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Meat/Poultry</td>\n",
+       "      <td>25.7600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Confections</td>\n",
+       "      <td>25.1190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>24.6129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Grains/Cereals</td>\n",
+       "      <td>21.7143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Produce</td>\n",
+       "      <td>21.6667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>21.5672</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CategoryName  AvgOrderQuantity\n",
+       "0      Condiments           28.2245\n",
+       "1  Dairy Products           26.0100\n",
+       "2    Meat/Poultry           25.7600\n",
+       "3     Confections           25.1190\n",
+       "4       Beverages           24.6129\n",
+       "5  Grains/Cereals           21.7143\n",
+       "6         Produce           21.6667\n",
+       "7         Seafood           21.5672"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query =\"SELECT CategoryName, avg(Quantity) AS AvgOrderQuantity FROM categories JOIN products ON products.CategoryID=categories.CategoryID  JOIN orderdetails ON orderdetails.ProductID = products.ProductID  group by CategoryName order by AvgOrderQuantity DESC;\"\n",
+    "simple_query(query)"
    ]
   },
   {
@@ -283,9 +798,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ironhack",
    "language": "python",
-   "name": "python3"
+   "name": "ironhack"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.5"
   },
   "nbTranslate": {
    "displayLangs": [
