--- a/main.ipynb
+++ b/main.ipynb
@@ -30,8 +30,18 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "WITH ExpensiveProducts AS (\n",
+    "    SELECT\n",
+    "        ProductName,\n",
+    "        Unit\n",
+    "    FROM products\n",
+    "    WHERE Price > 50\n",
+    ")\n",
     "\n",
+    "SELECT\n",
+    "    ProductName,\n",
+    "    Unit\n",
+    "FROM ExpensiveProducts;\n",
     "```"
    ]
   },
@@ -67,7 +77,13 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "SELECT p.ProductName, SUM(p.Price * od.Quantity) AS Profit\n",
+    "FROM products AS p\n",
+    "JOIN orderdetails AS od ON p.ProductID = od.ProductID\n",
+    "JOIN orders AS o ON od.OrderID = o.OrderID\n",
+    "GROUP BY p.ProductName\n",
+    "ORDER BY Profit DESC\n",
+    "LIMIT 5;\n",
     "```"
    ]
   },
@@ -103,7 +119,17 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "WITH CategoryProductCounts AS (\n",
+    "    SELECT c.CategoryName, COUNT(p.ProductID) AS ProductCount\n",
+    "    FROM Categories AS c\n",
+    "    LEFT JOIN Products AS p ON c.CategoryID = p.CategoryID\n",
+    "    GROUP BY c.CategoryName\n",
+    ")\n",
+    "\n",
+    "SELECT CategoryName, ProductCount\n",
+    "FROM CategoryProductCounts\n",
+    "ORDER BY ProductCount DESC\n",
+    "LIMIT 5;\n",
     "```"
    ]
   },
@@ -136,8 +162,19 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "WITH CategoryAvgOrderQuantity AS (\n",
+    "    SELECT  c.CategoryName,\n",
+    "        AVG(od.Quantity) AS AvgOrderQuantity\n",
+    "    FROM Categories AS c\n",
+    "    JOIN Products AS p ON c.CategoryID = p.CategoryID\n",
+    "    LEFT JOIN OrderDetails AS od ON p.ProductID = od.ProductID\n",
+    "    LEFT JOIN Orders AS o ON od.OrderID = o.OrderID\n",
+    "    GROUP BY c.CategoryName\n",
+    ")\n",
     "\n",
+    "SELECT CategoryName, AvgOrderQuantity\n",
+    "FROM CategoryAvgOrderQuantity\n",
+    "ORDER BY CategoryName;\n",
     "```"
    ]
   },
@@ -172,8 +209,18 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "WITH CustomerAvgOrderAmount AS (\n",
+    "    SELECT c.CustomerID, c.CustomerName, AVG(p.Price * od.Quantity) AS AvgOrderAmount\n",
+    "    FROM Customers AS c\n",
+    "    JOIN Orders AS o ON c.CustomerID = o.CustomerID\n",
+    "    JOIN OrderDetails AS od ON o.OrderID = od.OrderID\n",
+    "    JOIN Products AS p ON od.ProductID = p.ProductID\n",
+    "    GROUP BY c.CustomerID, c.CustomerName\n",
+    ")\n",
     "\n",
+    "SELECT CustomerID, CustomerName, AvgOrderAmount\n",
+    "FROM CustomerAvgOrderAmount\n",
+    "ORDER BY AvgOrderAmount DESC;\n",
     "\n",
     "```"
    ]
@@ -249,8 +296,18 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- Your code down below\n",
+    "WITH ProductSales AS (\n",
+    "    SELECT p.ProductID, p.ProductName, SUM(od.Quantity) AS TotalSales\n",
+    "    FROM Products AS p\n",
+    "    JOIN OrderDetails AS od ON p.ProductID = od.ProductID\n",
+    "    JOIN Orders AS o ON od.OrderID = o.OrderID\n",
+    "    WHERE YEAR(o.OrderDate) = 1997\n",
+    "    GROUP BY p.ProductID, p.ProductName\n",
+    ")\n",
     "\n",
+    "SELECT ProductName, TotalSales\n",
+    "FROM ProductSales\n",
+    "ORDER BY TotalSales DESC;\n",
     " ```"
    ]
   },
@@ -283,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "nbTranslate": {
    "displayLangs": [
