--- a/main.ipynb
+++ b/main.ipynb
@@ -17,22 +17,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "87388db4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql\n",
+    "import sqlalchemy as alch\n",
+    "from getpass import getpass\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "24211057",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
+   "source": [
+    "password = getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "17314968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbName = \"northwind\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14c24b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connectionData = f\"mysql+pymysql://root:{password}@localhost/{dbName}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "68db06b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = alch.create_engine(connectionData)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "434a02a8",
    "metadata": {},
    "source": [
     "## 1. Write a CTE that lists the names and quantities of products with a unit price greater than $50."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8be0e96f",
-   "metadata": {},
-   "source": [
-    "```sql\n",
-    "-- Your code down below\n",
-    "\n",
-    "```"
    ]
   },
   {
@@ -54,6 +104,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bb659aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT ProductName, Unit FROM products WHERE price > 50;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "de1d43c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mishi Kobe Niku</td>\n",
+       "      <td>18 - 500 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carnarvon Tigers</td>\n",
+       "      <td>16 kg pkg.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sir Rodney's Marmalade</td>\n",
+       "      <td>30 gift boxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "      <td>50 bags x 30 sausgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Côte de Blaye</td>\n",
+       "      <td>12 - 75 cl bottles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Manjimup Dried Apples</td>\n",
+       "      <td>50 - 300 g pkgs.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>5 kg pkg.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               ProductName                  Unit\n",
+       "0          Mishi Kobe Niku      18 - 500 g pkgs.\n",
+       "1         Carnarvon Tigers            16 kg pkg.\n",
+       "2   Sir Rodney's Marmalade         30 gift boxes\n",
+       "3  Thüringer Rostbratwurst  50 bags x 30 sausgs.\n",
+       "4            Côte de Blaye    12 - 75 cl bottles\n",
+       "5    Manjimup Dried Apples      50 - 300 g pkgs.\n",
+       "6     Raclette Courdavault             5 kg pkg."
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(query, engine)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1dc2612a",
    "metadata": {},
@@ -62,13 +213,104 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a0f2d37a",
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1a6349b0",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```sql\n",
-    "-- Your code down below\n",
-    "```"
+    "query = '''SELECT products.ProductId, ProductName, SUM(products.price * orderDetails.quantity) AS TotalRevenue\n",
+    "FROM products\n",
+    "    JOIN orderDetails\n",
+    "        ON products.ProductId = orderDetails.productId\n",
+    "GROUP BY ProductId\n",
+    "ORDER BY TotalRevenue DESC\n",
+    "LIMIT 5;'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5778d7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>TotalRevenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Côte de Blaye</td>\n",
+       "      <td>63096.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Thüringer Rostbratwurst</td>\n",
+       "      <td>20832.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59</td>\n",
+       "      <td>Raclette Courdavault</td>\n",
+       "      <td>19030.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>62</td>\n",
+       "      <td>Tarte au sucre</td>\n",
+       "      <td>15925.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Camembert Pierrot</td>\n",
+       "      <td>14620.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ProductId              ProductName  TotalRevenue\n",
+       "0         38            Côte de Blaye       63096.0\n",
+       "1         29  Thüringer Rostbratwurst       20832.0\n",
+       "2         59     Raclette Courdavault       19030.0\n",
+       "3         62           Tarte au sucre       15925.0\n",
+       "4         60        Camembert Pierrot       14620.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(query, engine)"
    ]
   },
   {
@@ -98,13 +340,98 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5dad5f54",
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e8bcae68",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```sql\n",
-    "-- Your code down below\n",
-    "```"
+    "query = '''SELECT CategoryName, COUNT(productId) AS ProductCount\n",
+    "FROM categories\n",
+    "    JOIN products\n",
+    "        ON categories.CategoryID = products.CategoryID\n",
+    "GROUP BY CategoryName\n",
+    "ORDER BY ProductCount DESC\n",
+    "LIMIT 5;'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "049523d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CategoryName</th>\n",
+       "      <th>ProductCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Confections</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Condiments</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dairy Products</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CategoryName  ProductCount\n",
+       "0     Confections            13\n",
+       "1       Beverages            12\n",
+       "2      Condiments            12\n",
+       "3         Seafood            12\n",
+       "4  Dairy Products            10"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(query, engine)"
    ]
   },
   {
@@ -131,14 +458,116 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "79d18b03",
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d8d68f7c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```sql\n",
-    "-- Your code down below\n",
-    "\n",
-    "```"
+    "query = '''\n",
+    "SELECT categories.CategoryName, SUM(quantity) / COUNT(products.productID) AS AvgOrderQuantity FROM orderDetails\n",
+    "    JOIN products\n",
+    "        ON orderDetails.ProductID = products.ProductID\n",
+    "    JOIN categories\n",
+    "        ON products.CategoryID = categories.CategoryID\n",
+    "GROUP BY categories.categoryID;'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3c5b2961",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CategoryName</th>\n",
+       "      <th>AvgOrderQuantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>24.6129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Condiments</td>\n",
+       "      <td>28.2245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Confections</td>\n",
+       "      <td>25.1190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dairy Products</td>\n",
+       "      <td>26.0100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Grains/Cereals</td>\n",
+       "      <td>21.7143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Meat/Poultry</td>\n",
+       "      <td>25.7600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Produce</td>\n",
+       "      <td>21.6667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>21.5672</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CategoryName  AvgOrderQuantity\n",
+       "0       Beverages           24.6129\n",
+       "1      Condiments           28.2245\n",
+       "2     Confections           25.1190\n",
+       "3  Dairy Products           26.0100\n",
+       "4  Grains/Cereals           21.7143\n",
+       "5    Meat/Poultry           25.7600\n",
+       "6         Produce           21.6667\n",
+       "7         Seafood           21.5672"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(query, engine)"
    ]
   },
   {
@@ -283,9 +712,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ironhack",
    "language": "python",
-   "name": "python3"
+   "name": "ironhack"
   },
   "language_info": {
    "codemirror_mode": {
@@ -297,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.5"
   },
   "nbTranslate": {
    "displayLangs": [
